// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute evidence form needing response, renders correctly 1`] = `
<div>
  <div
    class="components-card is-size-large css-l3gor6-CardUI e1q7k77g0"
  >
    <div
      class="components-card__header is-size-large css-6qsnk-HeaderUI e1q7k77g1"
    >
      General evidence
    </div>
    <div
      class="components-card__body is-size-large css-1yyn1r2-BodyUI e1q7k77g3"
    >
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-textarea-control-0"
          >
            Product description
          </label>
          <textarea
            class="components-textarea-control__input"
            id="inspector-textarea-control-0"
            rows="4"
          />
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-text-control-0"
          >
            Customer name
          </label>
          <input
            class="components-text-control__input"
            id="inspector-text-control-0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="form-file-upload-base-control-customer_signature"
          >
            Customer signature
          </label>
          <div
            class="components-drop-zone__provider"
          >
            <div
              class="components-drop-zone"
            />
          </div>
          <div
            class="file-upload"
          >
            <div
              class="components-form-file-upload"
            >
              <button
                class="components-button components-icon-button has-text is-button is-primary is-large"
                id="form-file-upload-customer_signature"
                type="button"
              >
                <svg
                  class="gridicon gridicons-add-outline"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12 4c4.41 0 8 3.59 8 8s-3.59 8-8 8-8-3.59-8-8 3.59-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm5 9h-4V7h-2v4H7v2h4v4h2v-4h4v-2z"
                    />
                  </g>
                </svg>
                Upload file
              </button>
              <input
                accept=".pdf, image/png, image/jpeg"
                style="display: none;"
                type="file"
              />
            </div>
            <span
              class="upload-message"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="components-card is-size-large css-l3gor6-CardUI e1q7k77g0"
  >
    <div
      class="components-card__body is-size-large css-1yyn1r2-BodyUI e1q7k77g3"
    >
      <p>
        When you submit your evidence, we'll format it and send it to the cardholder's bank, then email you once the dispute has been decided.
      </p>
      <p>
        <strong>
          Evidence submission is final.
        </strong>
         
        You can also save this evidence for later instead of submitting it immediately.
         
        <strong>
          We will automatically submit any saved evidence at the due date.
        </strong>
      </p>
    </div>
    <div
      class="components-card__footer is-size-large css-wy9sfy-FooterUI e1q7k77g4"
    >
      <button
        class="components-button is-button is-primary is-large"
        type="button"
      >
        Submit evidence
      </button>
      <button
        class="components-button is-button is-default is-large"
        type="button"
      >
        Save for later
      </button>
    </div>
  </div>
</div>
`;

exports[`Dispute evidence form not needing response, renders correctly 1`] = `
<div>
  <div
    class="components-card is-size-large css-l3gor6-CardUI e1q7k77g0"
  >
    <div
      class="components-card__header is-size-large css-6qsnk-HeaderUI e1q7k77g1"
    >
      General evidence
    </div>
    <div
      class="components-card__body is-size-large css-1yyn1r2-BodyUI e1q7k77g3"
    >
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-textarea-control-1"
          >
            Product description
          </label>
          <textarea
            class="components-textarea-control__input"
            disabled=""
            id="inspector-textarea-control-1"
            rows="4"
          />
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-text-control-1"
          >
            Customer name
          </label>
          <input
            class="components-text-control__input"
            disabled=""
            id="inspector-text-control-1"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="form-file-upload-base-control-customer_signature"
          >
            Customer signature
          </label>
          <div
            class="components-drop-zone__provider"
          >
            <div
              class="components-drop-zone"
            />
          </div>
          <div
            class="file-upload"
          >
            <div
              class="components-form-file-upload"
            >
              <button
                class="components-button components-icon-button has-text is-button is-primary is-large"
                disabled=""
                id="form-file-upload-customer_signature"
                type="button"
              >
                <svg
                  class="gridicon gridicons-add-outline"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12 4c4.41 0 8 3.59 8 8s-3.59 8-8 8-8-3.59-8-8 3.59-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm5 9h-4V7h-2v4H7v2h4v4h2v-4h4v-2z"
                    />
                  </g>
                </svg>
                Upload file
              </button>
              <input
                accept=".pdf, image/png, image/jpeg"
                style="display: none;"
                type="file"
              />
            </div>
            <span
              class="upload-message"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dispute evidence page renders correctly 1`] = `
<div>
  <div
    class="wcpay-dispute-evidence woocommerce-payments-page is-narrow"
  >
    <div
      class="components-card is-size-large css-l3gor6-CardUI e1q7k77g0"
    >
      <div
        class="components-card__header is-size-large css-6qsnk-HeaderUI e1q7k77g1"
      >
        Challenge dispute
      </div>
      <div
        class="components-card__body is-size-large css-1yyn1r2-BodyUI e1q7k77g3"
      >
        <div
          class="wcpay-dispute-info"
        >
          <div
            class="wcpay-dispute-info-item"
          >
            <span
              class="wcpay-dispute-info-key"
            >
              Dispute date: 
            </span>
            <span
              class="wcpay-dispute-info-value"
            >
              Nov 1, 2019
            </span>
          </div>
          <div
            class="wcpay-dispute-info-item"
          >
            <span
              class="wcpay-dispute-info-key"
            >
              Disputed amount: 
            </span>
            <span
              class="wcpay-dispute-info-value"
            >
              $10.00
            </span>
          </div>
          <div
            class="wcpay-dispute-info-item"
          >
            <span
              class="wcpay-dispute-info-key"
            >
              Respond by: 
            </span>
            <span
              class="wcpay-dispute-info-value"
            >
              Nov 8, 2019 - 2:46AM
            </span>
          </div>
          <div
            class="wcpay-dispute-info-item"
          >
            <span
              class="wcpay-dispute-info-key"
            >
              Reason: 
            </span>
            <span
              class="wcpay-dispute-info-value"
            >
              Fraudulent
            </span>
          </div>
          <div
            class="wcpay-dispute-info-item"
          >
            <span
              class="wcpay-dispute-info-key"
            >
              Transaction ID: 
            </span>
            <span
              class="wcpay-dispute-info-value"
            >
              <a
                data-link-type="wc-admin"
                href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="components-card is-size-large css-l3gor6-CardUI e1q7k77g0"
    >
      <div
        class="components-card__header is-size-large css-6qsnk-HeaderUI e1q7k77g1"
      >
        Product type
      </div>
      <div
        class="components-card__body is-size-large css-1yyn1r2-BodyUI e1q7k77g3"
      >
        <div
          class="components-base-control"
        >
          <div
            class="components-base-control__field"
          >
            <select
              class="components-select-control__input"
              id="inspector-select-control-0"
            >
              <option
                disabled=""
                value=""
              >
                Select one…
              </option>
              <option
                value="physical_product"
              >
                Physical product
              </option>
              <option
                value="digital_product_or_service"
              >
                Digital product or service
              </option>
              <option
                value="offline_service"
              >
                Offline service
              </option>
              <option
                value="multiple"
              >
                Multiple product types
              </option>
            </select>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
